apis/shopper-baskets/examples/error/slas-jwt-exception.raml
#%RAML 1.0 NamedExample
value:
  {
    "title": "Forbidden",
    "type": "https://api.commercecloud.salesforce.com/documentation/error/v1/errors/forbidden",
    "detail": "Your access-token is valid, but it contains no previous customer to process this action."
  }
